--- a/new/site-template/package.json
+++ b/new/site-template/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "zo-site",
+  "name": "ulogme-ui",
   "type": "module",
   "scripts": {
     "clear-cache": "rm -rf node_modules/.vite",
@@ -9,6 +9,7 @@
     "preview": "bun run vite preview"
   },
   "dependencies": {
+    "@duckdb/node-api": "^1.4.3-r.1",
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/modifiers": "^9.0.0",
     "@dnd-kit/sortable": "^10.0.0",
